[project]
name = "llm-conversation-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.0.0",
    "pre-commit>=4.3.0",
    "streamlit>=1.50.0",
]

# --- Tool configurations below ---

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Choose which rule sets to enable (E/F ~ pycodestyle/pyflakes; B=bugbear; C4=comprehensions)
select = ["E", "F", "B", "C4"]
# Silence Plotly-style dict() warnings
ignore = ["C408"]
# Allow auto-fixes where safe (used by the ruff --fix hook)
fixable = ["ALL"]
unfixable = []
